--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,18 @@
-﻿**/.DS_Store
+﻿# OS
+**/.DS_Store
+
+# VS Code
 higgs.code-workspace
+
+# Composer
 composer.lock
+vendor/
+
+# npm
+node_modules/
+
+# Kirby
 kirby/
 content/**/.lock
 public/media/
 storage/*/
-vendor/
