--- a/composer.json
+++ b/composer.json
@@ -23,8 +23,7 @@
     },
     "scripts": {
         "start": [
-            "Composer\\Config::disableProcessTimeout",
-            "@php -S localhost:8000 kirby/router.php"
+            "@php -S localhost:8000 -t public"
         ]
     },
     "config": {
