--- a/site/blueprints/pages/project.yml
+++ b/site/blueprints/pages/project.yml
@@ -36,3 +36,9 @@ columns:
             help:
               en: "Short description of the project."
               de: "Kurze Beschreibung des Projekts."
+      projectFiles:
+        type: files
+        headline:
+          en: "Files"
+          de: "Dateien"
+        layout: list
