--- a/site/blueprints/pages/project.yml
+++ b/site/blueprints/pages/project.yml
@@ -36,9 +36,17 @@ columns:
             help:
               en: "Short description of the project."
               de: "Kurze Beschreibung des Projekts."
+      projectCoverImage:
+        type: files
+        headline:
+          en: "Cover Image"
+          de: "Titelbild"
+        layout: list
+        max: 1
+        template: cover-image
       projectFiles:
         type: files
         headline:
-          en: "Files"
-          de: "Dateien"
+          en: "Project Files"
+          de: "Projektdateien"
         layout: list
