--- a/site/blueprints/pages/document.yml
+++ b/site/blueprints/pages/document.yml
@@ -7,10 +7,42 @@ columns:
         type: fields
         fields: 
           documentText:
-            type: textarea
+            type: blocks
             label: 
               en: "Content"
-              de: "Inhalt"  
+              de: "Inhalt"
+            autofocus: true
+            pretty: true 
+            fieldsets:
+              textGroup:
+                type: group
+                label: 
+                  en: Text
+                  de: Text
+                fieldsets:
+                  - heading
+                  - text
+                  - list
+                  - quote
+              codeGroup:
+                type: group
+                label: 
+                  en: Code
+                  de: Code
+                open: false
+                fieldsets:
+                  - code
+                  - makdown
+              mediaGroup:
+                type: group
+                label: 
+                  en: Media
+                  de: Medien
+                open: false
+                fieldsets:
+                  - image
+                  - gallery
+                  - video
   - width: 1/3
     sections:
       documentInfo:
