--- a/site/blueprints/pages/document.yml
+++ b/site/blueprints/pages/document.yml
@@ -43,11 +43,41 @@ columns:
                   - image
                   - gallery
                   - video
+      documentPublishedDocumentsLevel1:
+        extends: sections/published
+        when:
+          documentLevel: '・'
+      documentDraftDocumentsLevel1:
+        extends: sections/drafts
+        when:
+          documentLevel: '・'
+      documentPublishedDocumentsLevel2:
+        extends: sections/published
+        when:
+          documentLevel: '・・'
+      documentDraftDocumentsLevel2:
+        extends: sections/drafts
+        when:
+          documentLevel: '・・'
   - width: 1/3
     sections:
       documentInfo:
         type: fields
         fields:
+          documentLevel:
+            type: select
+            label: 
+              en: "Level"
+              de: "Ebene"
+            default: '・'
+            required: false
+            options: 
+              '・': 1
+              '・・': 2
+              '・・・': 3
+            help: 
+              en: Level in Table of Contents
+              de: Ebene im Inhaltsverzeichnis
           documentPart:
             # Translations from languages files
             type: select
@@ -95,7 +125,4 @@ columns:
       documentFiles:
         headline: Files
         type: files
-        layout: cards
-        image:
-          ratio: 1/1
-          cover: true
+        layout: list
