Change document type field

--- a/site/blueprints/pages/document.yml
+++ b/site/blueprints/pages/document.yml
@@ -72,7 +72,7 @@ columns:
               de: z.B. für Landmarks in ePubs
           documentType:
             # Translations from languages files
-            type: select
+            type: multiselect
             label: 
               en: Type
               de: Typ
