--- a/site/blueprints/pages/project.yml
+++ b/site/blueprints/pages/project.yml
@@ -22,6 +22,13 @@ columns:
         extends: sections/published
       projectDraftDocumentSection:
         extends: sections/drafts
+      projectFilesSection:
+        type: files
+        headline:
+          en: "Project Files"
+          de: "Projektdateien"
+        info: "{{ file.niceSize }}"
+        layout: list
   - width: 1/3
     sections:
       projectDescriptionSection:
@@ -35,46 +42,5 @@ columns:
             help:
               en: "Short description of the project."
               de: "Kurze Beschreibung des Projekts."
-      projectCoverImageSection:
-        type: files
-        headline:
-          en: "Cover Image"
-          de: "Titelbild"
-        text: "{{ file.filename }} ({{ file.dimensions }})"
-        info: "ALT: {{ file.alt }}"
-        layout: cards
-        max: 1
-        size: small
-        image:
-          ratio: 1/1
-          cover: false
-        template: cover
-      projectFilesSection:
-        type: files
-        headline:
-          en: "Files"
-          de: "Dateien"
-        info: "{{ file.dimensions }}"
-        layout: list
-        template: default
       projectEpubSection:
-        type: files
-        headline:
-          en: "ePub"
-          de: "ePub"
-        layout: list
-        template: epub
-      projectCssSection:
-        type: files
-        headline:
-          en: "Stylesheets"
-          de: "Stylesheets"
-        layout: list
-        template: css
-      projectFontSection:
-        type: files
-        headline:
-          en: "Fonts"
-          de: "Schriften"
-        layout: list
-        template: font
+        extends: sections/epub
