--- a/site/plugins/epub-module/blueprints/sections/epub.yml
+++ b/site/plugins/epub-module/blueprints/sections/epub.yml
@@ -3,14 +3,52 @@ fields:
   epubHeadline:
     type: headline
     label: 
-      en: "ePub Export"
-      de: "ePub-Export"
+      en: "General Settings"
+      de: "Allgemeine Einstellungen"
     numbered: false
-  epubCoverImage:
+  epubName:
+    type: text
+    label:
+      en: "File Name"
+      de: "Dateiname"
+    placeholder: "{{ page.slug }}"
+    after: ".epub"
+    converter: slug
+  epubVersion:
+    type: select
+    label:
+      en: Version
+      de: Version
+    options:
+      - "2.0"
+      - "3.0"
+    default: "3.0"
+  epubLanguage:
+    type: select
+    label:
+      en: "Language"
+      de: "Sprache"
+    options: query
+    query: 
+      fetch: kirby.languages
+      text: "{{ item.name }}"
+      value: "{{ item.code }}"
+    default: kirby.language.code
+  epubHasCoverImage:
+    type: toggle
+    label: 
+      en: "Include Cover"
+      de: "Titelbild einfügen"
+    text:
+      - en: "Nope"
+        de: "Nein"
+      - en: "Yes"
+        de: "Ja"
+  epubCoverImageFile:
     type: files
     label: 
-      en: "Cover Image"
-      de: "Titelbild"
+      en: "Cover File"
+      de: "Coverdatei"
     layout: cards
     size: small
     image:
@@ -20,11 +58,19 @@ fields:
     text: "{{ file.filename }} ({{ file.dimensions }})"
     info: "ALT: {{ file.alt }}"
     template: cover
+    when: 
+      epubHasCoverImage: true
+  epubImageHeadline:
+    type: headline
+    label: 
+      en: "Image Settings"
+      de: "Bildeinstellungen"
+    numbered: false
   epubImageWidth:
     type: number
     label: 
-      en: "Image Width (max)"
-      de: "Bildbreite (max)"
+      en: "Maximum Width"
+      de: "Maximale Breite"
     width: 1/2
     min: 10
     max: 3000
@@ -33,8 +79,8 @@ fields:
   epubImageHeight:
     type: number
     label: 
-      en: "Image Height (max)"
-      de: "Bildhöhe (max)"
+      en: "Maximum Height"
+      de: "Maximale Höhe (max)"
     width: 1/2
     min: 10
     max: 3000
@@ -51,6 +97,12 @@ fields:
     default: 80
     before: min
     after: max
+  epubFilesHeadline:
+    type: headline
+    label: 
+      en: "Additional files"
+      de: "Zusätzliche Dateien"
+    numbered: false
   epubCSSFiles:
     type: files
     label:
